--- a/Weindrachen/Weindrachen.csproj
+++ b/Weindrachen/Weindrachen.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="NSwag.AspNetCore" Version="14.0.7" />
   </ItemGroup>
 
 </Project>
