chore: preparing DBContext Migration

--- a/Weindrachen/appsettings.Development.json
+++ b/Weindrachen/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=172.17.02,3306;Database=weindrachen;Uid=root;Pwd=Melon@123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
