--- a/Weindrachen/Weindrachen.csproj
+++ b/Weindrachen/Weindrachen.csproj
@@ -7,13 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.2"/>
-        <PackageReference Include="NSwag.AspNetCore" Version="14.0.7"/>
+        <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.2" />
+        <PackageReference Include="NSwag.AspNetCore" Version="14.0.7" />
+        <PackageReference Include="Riok.Mapperly" Version="3.5.1" />
 
     </ItemGroup>
 
