--- a/Weindrachen/Weindrachen.csproj
+++ b/Weindrachen/Weindrachen.csproj
@@ -7,20 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MediatR" Version="12.2.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+        <PackageReference Include="FluentValidation" Version="11.9.1"/>
+        <PackageReference Include="MediatR" Version="12.2.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.2" />
-        <PackageReference Include="NSwag.AspNetCore" Version="14.0.7" />
-        <PackageReference Include="Riok.Mapperly" Version="3.5.1" />
+        <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.2"/>
+        <PackageReference Include="NSwag.AspNetCore" Version="14.0.7"/>
+        <PackageReference Include="Riok.Mapperly" Version="3.5.1"/>
 
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
+        <Folder Include="Controllers\"/>
     </ItemGroup>
 
 </Project>
