--- a/Weindrachen.Tests/Weindrachen.Tests.csproj
+++ b/Weindrachen.Tests/Weindrachen.Tests.csproj
@@ -39,4 +39,8 @@
         </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Application\Queries\BrandGrapeWine\" />
+    </ItemGroup>
+
 </Project>
